Fix a bug where line height isn't aligned in the SnsList

--- a/src/components/molecule/SnsList/SnsList.module.css
+++ b/src/components/molecule/SnsList/SnsList.module.css
@@ -1,6 +1,7 @@
 .list {
     display: flex;
     justify-content: center;
+    font-size: 16px;
 }
 
 .button {
